changing deployment strategy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,70 +1,88 @@
-name: CI/CD Deployment
+name: Node.js CI/CD (pnpm)
 
 on:
   push:
-    branches:
-      - master
+    branches: ["master"]
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
+    permissions: # Add permissions
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Deploy to DigitalOcean
-        uses: appleboy/ssh-action@v1.2.0
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.6.2
+          run_install: false
+
+      - name: Install dependencies (pnpm)
+        run: pnpm install --frozen-lockfile --prod
+
+      - name: Build Docker image
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/social-backend:latest .
+        env:
+          ATLAS_URI: ${{ secrets.ATLAS_URI }}
+          CLOUD_API_KEY: ${{ secrets.CLOUD_API_KEY }}
+          CLOUD_API_SECRET: ${{ secrets.CLOUD_API_SECRET }}
+          CLOUD_NAME: ${{ secrets.CLOUD_NAME }}
+          JWT_ACCESS_SECRET: ${{ secrets.JWT_ACCESS_SECRET }}
+          MAIL_HOST: ${{ secrets.MAIL_HOST }}
+          MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
+          MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+          STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+          STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
+          SERVICE_NAME: ${{ secrets.SERVICE_NAME }}
+          PORT: ${{ secrets.PORT }}
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Push Docker image
+        run: docker push ghcr.io/${{ github.repository_owner }}/social-backend:latest
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to DigitalOcean via SSH
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            set -e
-
-            PROJECT_DIR=~/projects/social_backend
-            REPO_URL=https://github.com/mir2x/social_backend.git
-            BRANCH=master
-
-            echo "Starting deployment..."
-
-            if [ ! -d "$PROJECT_DIR" ]; then
-              echo "Directory $PROJECT_DIR does not exist. Creating..."
-              mkdir -p "$PROJECT_DIR"
-            else
-              echo "Directory $PROJECT_DIR exists."
-            fi
-
-            cd "$PROJECT_DIR"
-
-            if [ ! -d ".git" ]; then
-              echo "Directory is not a Git repository. Cloning repository..."
-              git clone --branch $BRANCH $REPO_URL .
-            fi
-
-            echo "Ensuring the working directory is up-to-date..."
-            git pull origin $BRANCH
-
-            if [ "$(docker ps -q -f name=social-backend)" ]; then
-              echo "Container 'social-backend' is running. Stopping and removing..."
-              docker stop social-backend
-              docker rm social-backend
-            elif [ "$(docker ps -aq -f status=exited -f name=social-backend)" ]; then
-              echo "Container 'social-backend' exists but is not running. Removing..."
-              docker rm social-backend
-            else
-              echo "No existing container 'social-backend' found."
-            fi
-
-            echo "Building Docker image..."
-            docker buildx build --platform linux/amd64 -t social-backend:latest --load .
-
-            echo "Running Docker container..."
-            docker run -d \
-              -p 7002:7002 \
-              --env-file .env \
-              --restart on-failure \
+            docker stop social-backend || true
+            docker rm social-backend || true
+            docker login ghcr.io -u ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }}
+            docker pull ghcr.io/${{ github.repository_owner }}/social-backend:latest
+            docker run -d --restart=always \
+              -p ${{ secrets.PORT }}:7002 \
               --name social-backend \
-              social-backend:latest
-
-            echo "Deployment completed successfully."
+              -e ATLAS_URI="${{ secrets.ATLAS_URI }}" \
+              -e CLOUD_API_KEY="${{ secrets.CLOUD_API_KEY }}" \
+              -e CLOUD_API_SECRET="${{ secrets.CLOUD_API_SECRET }}" \
+              -e CLOUD_NAME="${{ secrets.CLOUD_NAME }}" \
+              -e JWT_ACCESS_SECRET="${{ secrets.JWT_ACCESS_SECRET }}" \
+              -e MAIL_HOST="${{ secrets.MAIL_HOST }}" \
+              -e MAIL_PASSWORD="${{ secrets.MAIL_PASSWORD }}" \
+              -e MAIL_USERNAME="${{ secrets.MAIL_USERNAME }}" \
+              -e SERVICE_NAME="${{ secrets.SERVICE_NAME }}" \
+              -e PORT="${{ secrets.PORT }}" \
+              -e STRIPE_SECRET_KEY="${{ secrets.STRIPE_SECRET_KEY }}" \
+              -e STRIPE_WEBHOOK_SECRET="${{ secrets.STRIPE_WEBHOOK_SECRET }}"\
+              ghcr.io/${{ github.repository_owner }}/social-backend:latest
+            docker image prune -f
