changed docker build strategy

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,25 @@
-node_modules
-Dockerfile
-.dockerignore
-.env
-.github
-.prettierignore
-.prettierrc.json
-logs
+**/.git
+**/.github
+**/node_modules
+**/dist
+**/logs
+**/*.log
+**/.env
+**/.env.*
+**/.vscode
+**/.idea
+**/Dockerfile
+**/.dockerignore
+**/docker-compose*
+**/*.md
+**/LICENSE
+**/coverage
+**/test
+**/tests
+**/jest.config.*
+**/tsconfig.json
+**/tsconfig.*.json
+**/pnpm-debug.log
+**/.prettier*
+**/src/**/*.spec.ts
+**/src/**/*.test.ts
