user's module complete

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "multer": "^2.0.1",
     "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
     "stripe": "^17.4.0",
@@ -44,6 +45,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.7",
